package prog3.Biblioteca.entity;

public class Informatica extends Libro{

    @Override
    public Integer calcularTotalPrestamo(Integer caps)
    {
       return 14;
    }

}
