package prog3.Biblioteca.entity;

public class OtrosLibros extends Libro{
    @Override
    public Integer calcularTotalPrestamo(Integer caps)
    {
       return 35;
    }


}
